--- a/manage.html
+++ b/manage.html
@@ -76,6 +76,15 @@
         <div class="targets"></div>
         <a href="#" class="expander" tabindex="0">...</a>
       </div>
+      <div class="schedule" data-edit="false">
+        <input type="button" i18n-value="scheduleButton" data-cmd="schedule">
+        <div>
+          <span i18n-text="scheduleFrom"></span>
+          <input type="time">
+          <span i18n-text="scheduleTo"></span>
+          <input type="time">
+        </div>
+      </div>
     </div>
   </template>
 
@@ -154,6 +163,8 @@
   <script src="manage/filters.js"></script>
   <script src="manage/sort.js"></script>
   <script src="manage/manage.js"></script>
+  <script src="schedule/core.js"></script>
+  <script src="schedule/ui.js"></script>
 
   <script src="vendor-overwrites/colorpicker/colorconverter.js" async></script>
   <script src="vendor-overwrites/colorpicker/colorpicker.js" async></script>
